--- a/Pipfile
+++ b/Pipfile
@@ -4,18 +4,17 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+ipython = "*"
 
 [packages]
 pyqt5 = "*"
 requests = "*"
 pandas = "*"
 numpy = "*"
-ipython = "*"
-qtpy = "*"
 jinja2 = "*"
-namedentities = "*"
 exchangelib = "*"
-openpyxl = "==3.0.1"
+openpyxl = "*"
+namedentities = "*"
 
 [requires]
 python_version = "3.7"
